--- a/example/legacy-renderer/index.html
+++ b/example/legacy-renderer/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>iFrame Rendering</title>
   </head>
-  <script src="https://unpkg.com/penpal@4.1.1/dist/penpal.min.js"></script>
+  <script src="https://unpkg.com/penpal@4.1.1/dist/penpal.min.js" integrity="sha384-a1NA/ZQylyzyn23XFcLfSJR0ZNTu+z8xnBgAtSDFwYmryflQ4h2WTtulPZ7mSRhU" crossorigin="anonymous"></script>
 
   <body>
     <div id="template"></div>
